# clarity_minds

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/core/: admin.py  models.py
apps/core/migrations/: 0001_initial.py  0002_alter_student_school_class.py
apps/feedback/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
apps/feedback/migrations/: 0001_initial.py  0002_alter_feedback_emoji.py  0003_feedback_is_anonymous.py
apps/users/: admin.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_first_name.py
clarity_minds/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/css/: style.css
templates/: base.html  feedback-error.html  feedbacks.html  home.html  login.html  school_classes.html  thank-you.html
